2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* gnome-default-applications-properties.c: (dialog_response): Update
	help link to point to user-guide.xml

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-09  Padraig O'Briain <padraig.obriain@sun.com>

	* gnome-default-applications-properties.glade: Add accessible 
	relations so accessible names are correctly reported. 
	Fixes bug #127302.

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* gnome-default-applications-properties.glade: Patch to fix spacing 
	between action area and vbox of preferences dialog.

Fri Aug  1 15:49:03 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-default-applications-properties-structs.c
	(possible_terminals): Add N_() calls to all the human readable
	strings.  Based on a patch from Christophe Fergeau
	<teuf@users.sourceforge.net>, #117085

	* gnome-default-applications-properties-structs.c
	(possible_terminals): remove help browsers.  We basically only
	support yelp at this point.

2003-07-19  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-default-applications-properties.c:  Added a window icon
	to the capplet.

2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-default-applications-properties.glade:  Very minor 
	HIGification of widget padding.
	
2003-07-14  Christophe Fergeau  <teuf@gnome.org>

	* gnome-default-applications-properties-structs.c: added a few more 
	  mailers
	* gnome-default-applications-properties.c:
	(initialize_default_applications): only display Evolution once when
	  both evo<=1.2 and evo>=1.4 are installed

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-25  Christophe Fergeau <teuf@users.sourceforge.net>

	* capplets/default-applications/gnome-default-applications-properties-structs.c